--- a/WebContent/views/location.view.html
+++ b/WebContent/views/location.view.html
@@ -325,6 +325,7 @@ Licensed under MIT
                                     <div ng-message="maxlength">MAX limit is 1000 characters</div>
                                 </div>
                                 </div>
+                                </div>
                                 <!--  >div class="form-group">
                                     <label for="inputEmail3" class="col-sm-4 control-label">Keywords:</label>
                                     <div class="col-sm-7">
