--- a/WebContent/views/questionManagement.view.html
+++ b/WebContent/views/questionManagement.view.html
@@ -142,13 +142,23 @@
                                 <div class="form-group required">
                                     <label for="inputName2" class="col-sm-2 control-label">Start Label:</label>
                                     <div class="col-sm-7">
-                                        <input type="text" class="form-control" id="inputName2" placeholder="A start label for the category" ng-model="model.createQc.newStartLabel" required="required" />
+                                        <input type="text" class="form-control" name = "startLabel" id="inputName2" ng-pattern="/^[a-zA-Z0-9\s-,]{0,30}$/" placeholder="A start label for the category" ng-model="model.createQc.newStartLabel" required="required" />
+                                    <div ng-messages="model.locationCreateForm2.startLabel.$dirty && model.locationCreateForm2.startLabel.$error" style="color:maroon">									       
+									        <div ng-message="required">This field is required</div>
+									        <div ng-message="pattern">Can be alphanumeric and max 30 characters</div>
+									      
+									    </div>
                                     </div>
                                 </div>
                                 <div class="form-group required">
                                     <label for="inputName2" class="col-sm-2 control-label">End Label:</label>
                                     <div class="col-sm-7">
-                                        <input type="text" class="form-control" id="inputName2" placeholder="An end label for the category" ng-model="model.createQc.newEndLabel" required="required">
+                                        <input type="text" name="endlable" class="form-control" id="inputName2" ng-pattern="/^[a-zA-Z0-9\s-,]{0,30}$/" placeholder="An end label for the category" ng-model="model.createQc.newEndLabel" required="required">
+                                       <div ng-messages="model.locationCreateForm2.endlable.$dirty && model.locationCreateForm2.endlable.$error" style="color:maroon">									       
+									        <div ng-message="required">This field is required</div>
+									        <div ng-message="pattern">Can be alphanumeric and max 30 characters</div>
+									      
+									    </div>
                                     </div>
                                 </div>
                
@@ -327,13 +337,13 @@
                                 <div class="form-group">
                                     <label for="inputName2" class="col-sm-4 control-label">Start Label:</label>
                                     <div class="col-sm-7">
-                                        <input type="text" class="form-control" id="inputName2" placeholder="Enter a start label" ng-model="model.updateQc.startLabel">
+                                        <input type="text" class="form-control" id="inputName2" placeholder="Enter a start label" ng-model="model.updateQc.startLabel" required="required">
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="inputName2" class="col-sm-4 control-label">End Label:</label>
                                     <div class="col-sm-7">
-                                        <input type="text" class="form-control" id="inputName2" placeholder="Enter an end label" ng-model="model.updateQc.endLabel">
+                                        <input type="text" class="form-control" id="inputName2" placeholder="Enter an end label" ng-model="model.updateQc.endLabel" required="required">
                                     </div>
                                 </div>
                         
