PC 24 validations updated

--- a/WebContent/views/location.view.html
+++ b/WebContent/views/location.view.html
@@ -163,7 +163,7 @@ Licensed under MIT
                                 <div class="form-group">
                                     <label for="inputName3" class="col-sm-2 control-label">Description:</label>
                                     <div class="col-sm-7">
-                                        <textarea type="text" class="form-control" name="createLocationDescription" id="inputName3" ng-maxlength="1000" required="required" placeholder="Description of the location" ng-model="model.newLocation.description">
+                                        <textarea type="text" class="form-control" name="createLocationDescription" id="inputName3" ng-maxlength="1000" placeholder="Description of the location" ng-model="model.newLocation.description">
                                         </textarea>
                                         <div ng-messages="model.locationCreateForm.createLocationDescription.$dirty && model.locationCreateForm.createLocationDescription.$error" style="color:maroon">
 									        <div ng-message="maxlength">Your field is too long. Max allowed: 1000 chars.</div>
