--- a/WebContent/views/targetGroup.view.html
+++ b/WebContent/views/targetGroup.view.html
@@ -196,7 +196,7 @@ Licensed under MIT
                 <div class="modal-body">
                 <div class="form-horizontal" ng-form name="model.targetGroupUpdateForm">
                    
-                                <div class="form-group">
+                                <div class="form-group required">
                                     <label for="inputName2" class="col-sm-4 control-label">Target Group Name:</label>
                                     <div class="col-sm-7">
                                         <input type="text" class="form-control" name="updateTGN" id="inputName2" placeholder="Name of the Target group name" ng-pattern="/^[a-zA-Z0-9\s-,]{0,150}$/"  ng-model="model.tgUpdate.tgName" required="required">
@@ -222,7 +222,7 @@ Licensed under MIT
                                 </div>
                                 </div>
 
-                                <div class="form-group">
+                                <div class="form-group required">
                                     <label for="inputEmail3" class="col-sm-4 control-label">Location</label>
                                     <div class="col-sm-7">
                                         <select name="trainings" ng-options='loc.locationId as loc.locationName for loc in model.locationList' ng-model="model.tgUpdate.tgLocation" required="required">
@@ -231,7 +231,7 @@ Licensed under MIT
                                     </div>
                                 </div>
 
-                                <div class="form-group">
+                                <div class="form-group required">
                                     <label for="inputEmail3" class="col-sm-4 control-label">Training</label>
                                     <div class="col-sm-7">
                                         <select name="trainings" ng-options='tr.trainingId as tr.trainingName for tr in model.trainingList' ng-model="model.tgUpdate.tgTraining" required="required">
