--- a/WebContent/views/questionManagement.view.html
+++ b/WebContent/views/questionManagement.view.html
@@ -438,13 +438,18 @@
                                         {{model.selectedQc.questionCategoryName}}
                                     </div>
                                 </div>
-                                
+                                 <div class="form-group">
+                                    <label for="inputName3" class="col-sm-4 control-label">Description:</label>
+                                    <div class="col-sm-7 label-padding">
+                                        {{model.selectedQc.questionDescription}}
+                                    </div>
+                                </div>
                                 
                               
                                 <div class="form-group">
                                     <label for="inputName3" class="col-sm-4 control-label">Response Type:</label>
                                     <div class="col-sm-7 label-padding">
-                                        {{model.selectedQc.questionCategoryDescription}}
+                                        {{model.selectedQc.responseType}}
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -484,7 +489,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Question Category Details</h4>
+                    <h4 class="modal-title">Question Details</h4>
                 </div>
                 <div class="modal-body">
                    <div class="form-horizontal" ng-form name="locationUpdateForm">
